@@ -2288,6 +2288,9 @@
               --add-opens=java.base/java.util=ALL-UNNAMED
               --add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED
               --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+              --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+              -Dio.netty.tryReflectionSetAccessible=true
+              -Dio.grpc.netty.shaded.io.netty.tryReflectionSetAccessible=true
               -Dnet.bytebuddy.experimental=true
               -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito-core.version}/mockito-core-${mockito-core.version}.jar
               -Xshare:off
